# ZSHPOETRY

./: Dockerfile  README.md  config_ProjectDirectory.code-workspace  pyproject.toml
