[tool.poetry]
name = "prjupyter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.18.0"
numpy = "^2.2.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"
ipython = "^8.31.0"
notebook = "^7.3.2"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
nbconvert = "^7.16.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
